cmake_minimum_required(VERSION 2.8)
project(hateecw)
set(CMAKE_C_FLAGS "-O0 -ggdb -std=c99 -Wall -Wextra -pedantic -D_POSIX_C_SOURCE=200809L -fPIE")
set(CMAKE_C_LINK_EXECUTABLE "${CMAKE_C_LINK_EXECUTABLE} -lNCSCnet -lNCSEcw -lNCSEcwC -lNCSUtil -lX11 -Bdynamic")
add_executable(hateecw hateecw.c)
#target_link_libraries(hateecw NCSCnet NCSEcw NCSEcwC NCSUtil)
